--- a/src/mapbox-gl.css
+++ b/src/mapbox-gl.css
@@ -13,35 +13,57 @@
 .mapboxgl-ctrl-top-left,
 .mapboxgl-ctrl-top-right,
 .mapboxgl-ctrl-bottom-left,
-.mapboxgl-ctrl-bottom-right { position: absolute; pointer-events: none; z-index: 2; }
-.mapboxgl-ctrl-top-left     { top: 0; left: 0; }
+.mapboxgl-ctrl-bottom-right {
+  position: absolute;
+  pointer-events: none;
+  z-index: 2;
+}
+.mapboxgl-ctrl-top-left {
+  top: 0;
+  left: 0;
+}
 /* set in App.scss to use sass vars */
 /* .mapboxgl-ctrl-top-right    { top: 0; right: 0; } */
-.mapboxgl-ctrl-bottom-left  { bottom: 0; left: 0; }
-.mapboxgl-ctrl-bottom-right { right: 0; bottom: 0; }
+.mapboxgl-ctrl-bottom-left {
+  bottom: 0;
+  left: 0;
+}
+.mapboxgl-ctrl-bottom-right {
+  right: 0;
+  bottom: 0;
+}
 
 .mapboxgl-ctrl {
-    clear: both;
-    pointer-events: auto;
+  clear: both;
+  pointer-events: auto;
 
-    /* workaround for a Safari bug https://github.com/mapbox/mapbox-gl-js/issues/8185 */
-    transform: translate(0, 0);
+  /* workaround for a Safari bug https://github.com/mapbox/mapbox-gl-js/issues/8185 */
+  transform: translate(0, 0);
 }
-.mapboxgl-ctrl-top-left .mapboxgl-ctrl     { margin: 10px 0 0 10px; float: left; }
+.mapboxgl-ctrl-top-left .mapboxgl-ctrl {
+  margin: 10px 0 0 10px;
+  float: left;
+}
 /* set in App.scss to use sass vars */
 /* .mapboxgl-ctrl-top-right .mapboxgl-ctrl    { margin: 10px 10px 0 0; float: right; } */
-.mapboxgl-ctrl-bottom-left .mapboxgl-ctrl  { margin: 0 0 10px 10px; float: left; }
-.mapboxgl-ctrl-bottom-right .mapboxgl-ctrl { margin: 0 10px 10px 0; float: right; }
+.mapboxgl-ctrl-bottom-left .mapboxgl-ctrl {
+  margin: 0 0 10px 10px;
+  float: left;
+}
+.mapboxgl-ctrl-bottom-right .mapboxgl-ctrl {
+  margin: 0 10px 10px 0;
+  float: right;
+}
 
 .mapboxgl-ctrl-group {
-    border-radius: 4px;
-    background: #fff;
+  border-radius: 4px;
+  background: #fff;
 }
 
 .mapboxgl-ctrl-group:not(:empty) {
-    -moz-box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .mapboxgl-ctrl-group button {
@@ -67,7 +89,6 @@
   background-repeat: no-repeat;
   background-position: center center;
 }
-
 
 /* https://bugzilla.mozilla.org/show_bug.cgi?id=140562 */
 .mapboxgl-ctrl button::-moz-focus-inner {
@@ -129,64 +150,64 @@ a.mapboxgl-ctrl-logo {
   }
 
   .mapboxgl-ctrl-attrib.mapboxgl-compact {
-      min-height: 20px;
-      padding: 0;
-      margin: 10px;
-      position: relative;
-      background-color: #fff;
-      border-radius: 3px 12px 12px 3px;
+    min-height: 20px;
+    padding: 0;
+    margin: 10px;
+    position: relative;
+    background-color: #fff;
+    border-radius: 3px 12px 12px 3px;
   }
 
   .mapboxgl-ctrl-attrib.mapboxgl-compact:hover {
-      padding: 2px 24px 2px 4px;
-      visibility: visible;
-      margin-top: 6px;
+    padding: 2px 24px 2px 4px;
+    visibility: visible;
+    margin-top: 6px;
   }
 
   .mapboxgl-ctrl-top-left > .mapboxgl-ctrl-attrib.mapboxgl-compact:hover,
   .mapboxgl-ctrl-bottom-left > .mapboxgl-ctrl-attrib.mapboxgl-compact:hover {
-      padding: 2px 4px 2px 24px;
-      border-radius: 12px 3px 3px 12px;
+    padding: 2px 4px 2px 24px;
+    border-radius: 12px 3px 3px 12px;
   }
 
   .mapboxgl-ctrl-attrib.mapboxgl-compact .mapboxgl-ctrl-attrib-inner {
-      display: none;
+    display: none;
   }
 
   .mapboxgl-ctrl-attrib.mapboxgl-compact:hover .mapboxgl-ctrl-attrib-inner {
-      display: block;
+    display: block;
   }
 
   .mapboxgl-ctrl-attrib.mapboxgl-compact::after {
-      content: '';
-      cursor: pointer;
-      position: absolute;
-      background-image: url(svg/mapboxgl-ctrl-attrib.svg);
-      background-color: rgba(255, 255, 255, 0.5);
-      width: 24px;
-      height: 24px;
-      box-sizing: border-box;
-      border-radius: 12px;
+    content: '';
+    cursor: pointer;
+    position: absolute;
+    background-image: url(svg/mapboxgl-ctrl-attrib.svg);
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 24px;
+    height: 24px;
+    box-sizing: border-box;
+    border-radius: 12px;
   }
 
   .mapboxgl-ctrl-bottom-right > .mapboxgl-ctrl-attrib.mapboxgl-compact::after {
-      bottom: 0;
-      right: 0;
+    bottom: 0;
+    right: 0;
   }
 
   .mapboxgl-ctrl-top-right > .mapboxgl-ctrl-attrib.mapboxgl-compact::after {
-      top: 0;
-      right: 0;
+    top: 0;
+    right: 0;
   }
 
   .mapboxgl-ctrl-top-left > .mapboxgl-ctrl-attrib.mapboxgl-compact::after {
-      top: 0;
-      left: 0;
+    top: 0;
+    left: 0;
   }
 
   .mapboxgl-ctrl-bottom-left > .mapboxgl-ctrl-attrib.mapboxgl-compact::after {
-      bottom: 0;
-      left: 0;
+    bottom: 0;
+    left: 0;
   }
 }
 
